# xla

./: .gitignore  .tf_configure.bazelrc  OPENXLA_IN_TREE_REPLACE.md  workspace4.bzl
pjrt_plugin/: BUILD.bazel  README.md
pjrt_plugin/include/tensorflow/c/: c_api.h  c_api_macros.h  tf_status.h  tf_tensor.h
pjrt_plugin/include/tensorflow/core/common_runtime/next_pluggable_device/c/: plugin_c_api.h
pjrt_plugin/model/: graph_runner.py  graph_runner_musa_xla.py  graph_runner_origin.py  graph_runner_xla.py  xla_smoke.py
pjrt_plugin/model/tf_musa_runner_xla/: convert_spec_to_pb.py  graph_runner_xla.sh  musa_run_pb_graph_xla.py  musa_run_pb_graph_xla_origin.py
pjrt_plugin/model/tf_musa_runner_xla/meta_graph/: meta_graph_1.spec
pjrt_plugin/src/: musa_tf215_registry_bridge.cc  pjrt_api.cc  protobuf_descriptor_skip.cc  tensorflow_adapter.cc
tools/: python_bin_path.sh
tools/toolchains/cpus/aarch64/: aarch64_compiler_configure.bzl
xla/: debug_options_flags.cc  execution_options_util.cc  primitive_util.cc
xla/client/: BUILD  client.cc  client.h  client_library.cc  compile_only_client.h  executable_build_options.cc  executable_build_options.h  global_data.cc  global_data.h  local_client.cc  local_client.h
xla/hlo/ir/: hlo_instruction.cc
xla/pjrt/: metrics.cc  pjrt_stream_executor_client.cc  pjrt_stream_executor_client.h
xla/service/: BUILD  backend.h  collective_ops_utils.h  collective_permute_cycle.cc  collective_permute_cycle.h  collective_permute_cycle_test.cc  collective_permute_decomposer.cc  computation_placer.cc  service.cc  service.h  shaped_buffer.cc  source_target_pairs.h  source_target_pairs_test.cc  stream_pool.cc  transfer_manager.cc
xla/service/gpu/: BUILD  buffer_allocations.cc  compile_module_to_llvm_ir.cc  gpu_compiler.cc  gpu_compiler.h  gpu_executable.cc  gpu_layout_assignment.cc  gpu_transfer_manager.cc  hlo_fusion_analysis.cc  hlo_fusion_analysis.h  ir_emission_utils.cc  ir_emission_utils.h  ir_emitter_unnested.cc  mtgpu_compiler.cc  mtgpu_compiler.h  mtgpu_compiler_registration.cc  mtgpu_compiler_test.cc  mtgpu_execute_test.cc  musa_fusion_custom_calls.cc  musa_fusion_custom_calls.h  musa_fusion_custom_calls_test.cc  musa_layer_norm_rewriter.cc  musa_layer_norm_rewriter.h  musa_layer_norm_rewriter_test.cc  musa_runtime_registration_test.cc  reduction_splitter.cc  reduction_splitter.h  reduction_utils.cc  reduction_utils.h  target_constants.h  target_util.cc  target_util_test.cc  tree_reduction_rewriter.cc  tree_reduction_rewriter.h
xla/service/gpu/fusions/: reduction.cc  tiling_util.cc  tiling_util.h  transpose.cc
xla/service/gpu/llvm_gpu_backend/: BUILD  mtgpu_backend.cc  mtgpu_backend.h  mtgpu_backend_test.cc  musa_intrinsic.def
xla/service/gpu/runtime/: BUILD  custom_call.cc  executable.cc  gemm.cc  kernel_launch.cc  memcpy.cc  memset.cc  stream_synchronization.cc  tracing.cc  tracing.h
xla/stream_executor/: BUILD  bit_pattern.cc  bit_pattern.h  command_buffer.cc  device_memory_allocator.h  generic_memory_allocation.h  generic_memory_allocator.h  memory_allocation.h  memory_allocator.h  platform_manager.h  stream.cc  stream.h  stream_common.cc  stream_common.h  stream_executor_internal.h  stream_executor_pimpl.cc  stream_executor_pimpl.h  stream_test.cc
xla/stream_executor/cuda/: stream_search_test.cc
xla/stream_executor/gpu/: BUILD  gpu_init.cc
xla/stream_executor/host/: host_stream_test.cc
xla/stream_executor/musa/: BUILD  mublas_wrapper.h  musa_blas.cc  musa_blas.h  musa_blas_mudnn_test.cc  musa_command_buffer.cc  musa_command_buffer.h  musa_command_buffer_test.cc  musa_context.cc  musa_context.h  musa_event.h  musa_event_test.cc  musa_executor.cc  musa_executor.h  musa_kernel.cc  musa_kernel.h  musa_kernel_test.cc  musa_platform.cc  musa_platform.h  musa_platform_id.cc  musa_platform_id.h  musa_status.cc  musa_status.h  musa_stream.cc  musa_stream.h
xla/tests/: transfer_manager_test.cc
xla/translate/hlo_to_mhlo/: attribute_importer.cc
