load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

TF215_WHEEL_ROOT = "/workspace/openxla/pjrt_plugin/tf2.15/lib/python3.10/site-packages/tensorflow"

cc_library(
    name = "musa_pjrt_core",
    srcs = [
        "src/pjrt_api.cc",
    ],
    includes = [
        ".",
    ],
    deps = [
        "//xla/pjrt/c:pjrt_c_api_hdrs",
        "//xla/pjrt/c:pjrt_c_api_helpers",
        "//xla/pjrt/c:pjrt_c_api_wrapper_impl",
        "//xla/pjrt:compile_options_proto_cc",
        "//xla/pjrt:compile_options_proto_cc_impl",
        "//xla/pjrt:execute_options_proto_cc",
        "//xla/pjrt:execute_options_proto_cc_impl",
        "//xla/pjrt:stream_executor_executable_proto_cc",
        "//xla/pjrt:stream_executor_executable_proto_cc_impl",
        "//xla:autotune_results_proto_cc",
        "//xla:autotune_results_proto_cc_impl",
        "//xla:autotuning_proto_cc",
        "//xla:autotuning_proto_cc_impl",
        "//xla:xla_data_proto_cc",
        "//xla:xla_data_proto_cc_impl",
        "//xla:xla_proto_cc",
        "//xla:xla_proto_cc_impl",
        "//xla/hlo/ir:hlo",
        "//xla/pjrt:pjrt_client",
        "//xla/pjrt/gpu:se_gpu_pjrt_client",
        "//xla/service:buffer_assignment_proto_cc",
        "//xla/service:buffer_assignment_proto_cc_impl",
        "//xla/service:hlo_proto_cc",
        "//xla/service:hlo_proto_cc_impl",
        "//xla/stream_executor/musa:musa_platform",
        "//xla/stream_executor:device_description_proto_cc",
        "//xla/stream_executor:device_description_proto_cc_impl",
        "//xla/stream_executor:platform_manager",
        "//xla/stream_executor:stream_executor_pimpl",
        "//xla/service/gpu:backend_configs_cc",
        "//xla/service/gpu:backend_configs_cc_impl",
        "//xla/service/gpu:executable_proto_cc",
        "//xla/service/gpu:executable_proto_cc_impl",
        "//xla/service/gpu:gpu_autotuning_proto_cc",
        "//xla/service/gpu:gpu_autotuning_proto_cc_impl",
        "//xla/service/gpu:gpu_transfer_manager",
        "//xla/service/gpu:hlo_op_profile_proto_cc",
        "//xla/service/gpu:hlo_op_profile_proto_cc_impl",
        "//xla/service/gpu:mtgpu_compiler",
        "//xla/service/memory_space_assignment",
        "//xla/service/memory_space_assignment:memory_space_assignment_proto_cc",
        "//xla/service/memory_space_assignment:memory_space_assignment_proto_cc_impl",
        "//xla/stream_executor/gpu:gpu_init_impl",
        "@local_tsl//tsl/protobuf:dnn_proto_cc",
        "@local_tsl//tsl/protobuf:dnn_proto_cc_impl",
        "@local_tsl//tsl/protobuf:bfc_memory_map_proto_cc",
        "@local_tsl//tsl/protobuf:bfc_memory_map_proto_cc_impl",
        "@local_tsl//tsl/protobuf:coordination_config_proto_cc",
        "@local_tsl//tsl/protobuf:coordination_config_proto_cc_impl",
        "@local_tsl//tsl/protobuf:distributed_runtime_payloads_proto_cc",
        "@local_tsl//tsl/protobuf:distributed_runtime_payloads_proto_cc_impl",
        "@local_tsl//tsl/protobuf:histogram_proto_cc",
        "@local_tsl//tsl/protobuf:histogram_proto_cc_impl",
        "@com_google_protobuf//:protobuf",
        "@local_tsl//tsl/framework:allocator",
        "@local_tsl//tsl/platform:env",
        "@local_tsl//tsl/platform:protobuf",
        "@local_tsl//tsl/profiler/backends/cpu:traceme_recorder",
        "@local_tsl//tsl/profiler/backends/cpu:annotation_stack",
        "@local_tsl//tsl/profiler/utils:time_utils",
        "@local_tsl//tsl/util:determinism",
    ],
    alwayslink = True,
)

cc_library(
    name = "musa_tf215_npd_adapter_lib",
    srcs = [
        "src/tensorflow_adapter.cc",
    ],
    hdrs = [
        "include/tensorflow/core/common_runtime/next_pluggable_device/c/plugin_c_api.h",
        "include/tensorflow/c/c_api.h",
        "include/tensorflow/c/c_api_macros.h",
        "include/tensorflow/c/tf_status.h",
        "include/tensorflow/c/tf_tensor.h",
    ],
    includes = [
        "include",
        ".",
        TF215_WHEEL_ROOT + "/include",
    ],
    deps = [
        "//xla/c:c_api_decl",
        "//xla/pjrt/c:pjrt_c_api_hdrs",
        "//xla/stream_executor/tpu:c_api_decl",
        "//xla/stream_executor/tpu:libtftpu_header",
        "@local_tsl//tsl/c:tsl_status",
    ],
    alwayslink = True,
)

cc_binary(
    name = "libmusa_pjrt_plugin.so",
    linkshared = True,
    linkopts = [
        "-Wl,-Bsymbolic-functions",
    ],
    deps = [
        ":musa_pjrt_core",
    ],
)

cc_binary(
    name = "libmusa_tf215_npd_adapter.so",
    linkshared = True,
    linkopts = [
        "-Wl,-Bsymbolic",
        "-ldl",
        TF215_WHEEL_ROOT + "/libtensorflow_framework.so.2",
        "-Wl,-rpath," + TF215_WHEEL_ROOT,
    ],
    deps = [
        ":musa_tf215_npd_adapter_lib",
    ],
)

cc_binary(
    name = "libmusa_tf215_registry_bridge.so",
    srcs = [
        "musa_tf215_registry_bridge.cc",
    ],
    linkshared = True,
)
